static/css/local.css
/* A font by Jos Buivenga (exljbris) -> www.exljbris.com */
@font-face {
	font-family: 'MuseoSans500';
	src: url('MuseoSans_500.eot');
	src: local('Museo Sans 500'), local('MuseoSans-500'), url('MuseoSans_500.woff') format('woff'), url('MuseoSans_500.otf') format('opentype'), url('MuseoSans_500.svg#MuseoSans-500') format('svg');
}


html, body {
	background-color: #c2efff;
	font-family: MuseoSans500, "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
	height: 100%;
	width: 100%;
}


#masthead_wrap {
	height: 220px;
	overflow: hidden;
	width: 100%;
	background: url(../img/masthead_bg.png) repeat-x left 105px;
	margin: 0 0 30px 0;
	padding: 0;
}

#masthead {
	width: 960px;
	height: 220px;
	overflow: hidden;
	margin: 0 auto;
	padding: 0;
	/*background: url(../img/masthead_pony.png) no-repeat center 10px;*/
	position: relative;
}

#masthead a#pony_home {
	display: block;
	position: absolute;
	width: 244px;
	height: 210px;
	top: 10px;
	left: 358px;
	margin: 0;
	padding: 0;
	border: 0;
	background: url(../img/masthead_pony.png) no-repeat center top;
	
}

#masthead h1 {
	position: absolute;
	width: 363px;
	height: 99px;
	top: 105px;
	margin: 0;
	padding: 0;
}

#masthead h1 a {
	display: block;
	text-indent: -9999px;
	width: 363px;
	height: 99px;
	background: url(../img/djangocon_eu_masthead.png) no-repeat left 30px;
}

#masthead h2 {
	position: absolute;
	color: #157DBC;
	margin: 0;
	padding: 0;
	font-weight: normal;
	text-transform: uppercase;
	text-shadow: #fff 0 1px 0;
}

h2#where {
	top: 145px;
	font-size: 42px;
	left: 648px;
	letter-spacing: 0.1em;
}

h2#when {
	top: 127px;	
	font-size: 15px;
	color: #909ca2;
	left: 650px;
}

#tagline_wrap {
	width: 960px;
	height: 143px;
	overflow: visible;
	margin: 0 auto 30px;
	padding: 0;
	position: relative;
	background: url(../img/taglines.png) no-repeat center top;
}

.tagline_gravatar {
	display: block;
	background: #f5f5f5;
	border: 1px solid #aaa;
	padding: 4px;
	position: absolute;
	top: 30px;
	left: -40px;
	-moz-border-radius: 2px;
	-webkit-border-radius: 2px;
	-webkit-box-shadow: 2px 4px 3px rgba(0,0,0,0.1);
	-moz-box-shadow: 2px 4px 3px rgba(0,0,0,0.1);
	-webkit-transform: rotate(-15deg);
	-moz-transform: rotate(-15deg);

}

.tagline_text {
	font-size: 36px;
	text-shadow: #fff 0 2px 0;
	position: absolute;
	line-height: 115px;
	top: 8px;
	left: 50px;
	width: 900px;
	color: #586c78;
}



fieldset {
	display: block;
	position: relative;
	margin-right: 20px;
	margin-bottom: 10px;
	clear: both;
}


#fieldset_email {
	height: 64px;
	float: left;
}

#fieldset_tagline {
	width: 100%;
}

label {
	text-transform: uppercase;
	font-family: MuseoSans500, "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
	display: block;
	font-size: 12px;
	line-height: 20px;
	height: 20px;
	padding: 0;
	margin: 0;
	color: #736357;;
	font-weight: normal;
	text-shadow: #fff -1px -1px 0;
}

label.infield {
	position: absolute;
	left: 5px;
	bottom: 5px;
	font-size: 13px;
	
}

input {
	font-family: MuseoSans500, "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
	margin: 0;
	display: block;
	padding: 4px;
	border: 1px #ddd solid;
	font-size: 24px;
	height:30px;
	line-height: 35px;
	font-weight: normal;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	vertical-align: middle;
	color: #157DBC;
	background: #fff url(../img/input_bg_white.png) repeat-x left bottom;
}

#fieldset_email input {
	height: 55px;
	width: 400px;
	font-size: 40px;
	line-height: 55px;
}

#signupbutton {
	width: 130px;
	height: 45px;
	background: url(../img/sign_up.png) no-repeat center center;
	cursor: pointer;
	text-indent: -9999px;
	position: relative;
	top: 10px;
}

#signupbutton:hover {
	background-image: url(../img/sign_up_hover.png);
}

#fieldset_tagline input {
	width: 95%;
}

#subscribe {
	width: 960px;
	overflow: visible;
	margin: 0 auto;
	padding: 0;
	position: relative;	
}

#subscribe h3 {
	font-weight: normal;
	color: #157DBC;
	text-shadow: #fff 0 1px 0;
	font-size: 19px;
	margin-bottom: 5px;
}

#subscribe h4 {
	font-weight: normal;
	color: #5f99bc;
	text-shadow: #fff 0 1px 0;
	font-size: 16px;
	margin-bottom: 10px;
}

#subscribe h4 a {
	color: #5284a2;
}

#subscribe h4 a:hover {
	color: #836651;
}

#subscribe h5 {
	font-weight: normal;
	color: #7ba7c2;
	text-shadow: #fff 0 1px 0;
	font-size: 14px;
}


/*#static {
    padding: 20px;
}

#static h2 {
	font-weight: normal;
	color: #157DBC;
	text-shadow: #fff 0 1px 0;
	font-size: 32px;
	margin-bottom: 5px;
}

#static p {
    font-weight: normal;
    color: #157DBC;
    font-size: 19px;
}*/

